Removed two projects

--- a/index.html
+++ b/index.html
@@ -91,67 +91,26 @@
             </p>
           <a class="btn btn-primary" href="https://itunes.apple.com/cn/app/麻溜单词/id1436428124?ls=1&mt=8" target="_blank">去App Store了解更多</a>
         </div>
+
       </div>
       <!-- /.row -->
 
-      <hr>
+      <!-- <hr> -->
 
       <!-- Project Three -->
-      <div class="row">
-        <div class="col-md-7">
-          <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/pic3.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-5">
-          <h3>MaliuHomer</h3>
-          <p>
-              <li>
-                  代码构建UI、约束
-              </li>
-              <li>
-                  Archiving
-              </li>
 
-              <li>
-                  使用语言：Objective-C
-              </li>
-            </p>
-          <a class="btn btn-primary" href="https://github.com/daisangebiao/MaliuHomer" target="_blank">去Github了解更多</a>
-        </div>
-      </div>
       <!-- /.row -->
 
-      <hr>
+      <!-- <hr> -->
 
       <!-- Project Four -->
-      <div class="row">
 
-        <div class="col-md-7">
-          <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/pic4.JPG" alt="">
-          </a>
-        </div>
-        <div class="col-md-5">
-          <h3>MaliuFeed</h3>
-          <p>
-
-              <li>
-                  网络请求、JSON数据解析、并发编程
-              </li>
-              <li>
-                  使用语言：Objective-C
-              </li>
-            </p>
-          <a class="btn btn-primary" href="https://github.com/daisangebiao/MaliuFeed" target="_blank">去Github了解更多</a>
-        </div>
-      </div>
       <!-- /.row -->
 
       <hr>
 
 
-      <!-- Project Four -->
+      <!-- Project Five -->
       <div class="row">
 
         <div class="col-md-7">
