Changed li tag of the third project

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                   嵌套的Collection View
               </li>
               <li>
-                  Delegate Protocol
+                  可以横向滑动的“View Controller”
               </li>
-              
+
             </p>
           <a class="btn btn-primary" href="https://github.com/daisangebiao/MLSwipeViewController" target="_blank">去Github了解更多</a>
         </div>
