Changed image for project4

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
 
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/p4.jpg" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="img/pic4.jpg" alt="">
           </a>
         </div>
         <div class="col-md-5">
           <h3>MaliuTabBarController</h3>
           <p>
 
-              
+
               <li>
                   可以横向滑动的“TabBarController”
               </li>
